2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: ++ --, unary +.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Abs.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Min, Max.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Negate.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Sub.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: All relational ops for long.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: No need to special case  long.MinValue
	or int.MinValue as 2 complement negate solves it.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: long CompareTo.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: IComparable.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Relational ops for ulong with switched args.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Equals(ulong) and missing CLSCompliant.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Relational ops for ulong. Fix CoreCompare.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Add constructor and coersion operators
	for ulong.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Add constructor and coersion operators
	for uint.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Implement -1,0,1 props. Don't allocate
	zero array.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Implement IComparable and IEquatable.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Compare and relational ops.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Add.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: GetHashCode.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Equals.
